# simpleStorage

./: .gitignore  app.js  client.js  deploy.py  index.html  interact.js  server.js  simpleStorage.sol
Ethereum/: ethereumInteract.js  ethereum_deploy.py
Solana/: Cargo.toml  solanaInteract.js  solana_deploy.py
Solana/src/: lib.rs
